--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-body {background-color: #ffffff;
+body {
   font-family: Verdana, sans-serif;
+  background-image: linear-gradient(to bottom, #d3d3d3, #ffffff, #d3d3d3);
 }
 
 header {
   background-color: #800000;
   color: #FFD700;
+  border-bottom: 2px solid #000000;
 }
 
 h1 {
@@ -28,9 +30,13 @@ nav {
 nav ul{
   list-style-type: none;
 }
-nav a {
+nav a { width: 180px;
   text-decoration: none;
+  border-bottom: 2px solid #888888;
 }
+nav a:link{color: #FFD700}
+nav a:visited{color: #9b870c;}
+nav a:hover{color: #ffff00;}
 
 .why {
   font-size: 30px;
@@ -50,7 +56,7 @@ main {
   margin-left: auto;
   margin-right: auto;
   background-color: #800000;
-box-shadow: 3px 5px 3px 3px #800000 ;
+box-shadow: 3px 5px 3px 3px #500000 ;
 }
 img {
   width: 200px;
@@ -60,4 +66,22 @@ img {
   padding-top: 20px;
   padding-right: 20px;
   padding-left: 20px;
+}
+
+#leftlogo {
+  width: 60px;
+  height: 60px;
+  padding-top: .5em;
+  object-fit: fill;
+  float: left;
+}
+
+
+
+footer {
+  font-style: italic;
+  font-size: small;
+  text-align:center;
+  margin-left: 10%;
+  margin-right: 10%;
 }
