--- a/style.css
+++ b/style.css
@@ -93,10 +93,29 @@ main li{
 	  padding-bottom: 10px;
 	  margin: 15px;
 	  text-align: center;
-    background-color: #888888;
+    background-color: #999999;
   }
   #producttext {
     float: right;
-    padding: 10px;
-    line-height: 100px;
+    padding: 10%;
+    line-height: 220%;
   }
+
+  #contacts {
+    font-style: italic;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+main a {
+  text-decoration: none;
+  color: inherit;
+  line-height: 2%;
+}
+
+@media only screen and (max-width: 1024px) {
+  #wrapper {width:auto; min-width: 0; margin: 0; box-shadow: none;}
+  main ul {margin:0; background-color: none; width: auto;}
+  "Shoes.jpg" "Jersey.Jpg" {width: auto; height: auto;}
+  footer {margin: 0;}
+}
